--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,6 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Inter:wght@200&family=Montserrat:ital,wght@0,300;1,100&display=swap');
+/* stagger animation on scroll */
 body{
 
     padding: 0%;
@@ -15,7 +17,6 @@ section {
     align-content: center;
     min-height: 40vh;
    }
-   
    .hidden {
     opacity: 0;
     transition: all 1s;
