shop changes - about changes

--- a/css/app.css
+++ b/css/app.css
@@ -309,3 +309,53 @@ h1 {
     font-weight: 700;
     color: var(--color-primary);
 }
+
+/* -------- product card ---------*/
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Add space between cards */
+
+  }
+
+  .card {
+    width: 18rem;
+    margin-bottom: 10rem; /* Add some margin between cards */
+  }
+
+  .card-body {
+    flex-grow: 1;
+    overflow: hidden; /* Prevent text overflow */
+  }
+
+  .card-img {
+    width: 100%;
+    height: 200px;
+    padding-top: 56.25%; /* 16:9 aspect ratio */
+    background-size: cover;
+  }
+/* -------- Page 3 --------*/
+.parallax {
+	background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+	background-size: cover;
+}
+.parallax-inner {
+	color: white;
+  display: flex;
+  height: 100%;
+  align-items: center;
+	justify-content: center;
+}
+
+/* -------- ProductCarousel ---------*/
+#ProductCarousel {
+    background: rgba(255, 255, 255, 0.5); /* Átlátszó fehér háttér példa */
+    margin: auto; /* Középre igazítás */
+  }
+  #ProductCarousel .carousel-inner img {
+    object-fit: cover;
+    height: 600px;
+    width: 100%;
+  }
