About us page angular + formating

--- a/css/app.css
+++ b/css/app.css
@@ -1,173 +1,85 @@
-/* Fontok betöltése */
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Inter:wght@200&family=Montserrat:ital,wght@0,300;1,100&display=swap');
 
-/* Slider rész stílusai */
+/* -------------Landing Page Animation------------ */
+
 .page-container.home header,
 .slider-text {
-    /* Háttérszín az oldalsó menühöz és a slider szövegeihez */
-    background-color: rgba(0, 0, 0, 0.3) !important;
+	background-color:rgba(0,0,0,.3) !important;	
 }
-
 .slider {
-    animation-duration: 20s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+	animation-duration: 20s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
 }
-
 .slider-1 {
-    animation-name: slider-1;
+  animation-name: slider-1;
 }
-
 .slider-2 {
-    animation-name: slider-2;
+	animation-name: slider-2;
 }
-
 .slider-3 {
-    animation-name: slider-3;
+	animation-name: slider-3;
 }
-
 .slider-4 {
-    animation-name: slider-4;
+	animation-name: slider-4;
 }
-
 .slider-image {
-    width: 110%;
-    animation: zoom-out 10s linear infinite;
+	width: 110%;
+  animation: zoom-out 10s linear infinite;
 }
-
 .slider-text {
-    border-radius: 10px;
-    top: 40%;
-    left: 5%;
-    width: 600px;
-    animation: text-up 5s ease-out infinite;
-    transform: translateY(200px);
+	border-radius: 10px;
+  top: 40%;
+  left: 5%;
+  width: 600px;
+  animation: text-up 5s ease-out infinite;
+	transform: translateY(200px);
 }
-
 .slider-title {
-    font-family: 'Playfair Display', serif;
-    font-size: 2.5rem;
-    margin-bottom: 16px;
+	font-family: 'Playfair Display', serif;
+	font-size: 2.5rem;
+  margin-bottom: 16px;
 }
-
 .slider-content {
-    font-size: 18px;
-    line-height: 28px;
+	font-size: 18px;
+  line-height: 28px;
 }
 
-/* Slider animációk */
+/* Az alábbi animációs kulcsszavak definiálják az animációkat a szöveg és a hátterek mozgatásához. */
 @keyframes text-up {
-
-    /* Szöveg animáció: felfelé mozgás */
-    10% {
-        transform: translateY(0px);
-    }
-
-    100% {
-        transform: translateY(0px);
-    }
+	 10% {transform: translateY(0px);}
+	100% {transform: translateY(0px);}
 }
-
 @keyframes zoom-out {
-
-    /* Kép animáció: kifelé nagyobbítás */
-    100% {
-        width: 100%;
-    }
+	100% {width: 100%;}
 }
-
 @keyframes slider-1 {
-
-    /* Slider animáció: 1. elem megjelenítése */
-    0% {
-        visibility: visible;
-    }
-
-    25% {
-        visibility: hidden;
-    }
-
-    50% {
-        visibility: hidden;
-    }
-
-    75% {
-        visibility: hidden;
-    }
-
-    100% {
-        visibility: visible;
-    }
+		0% {visibility: visible;}
+	 25% {visibility: hidden;}
+	 50% {visibility: hidden;}
+	 75% {visibility: hidden;}
+	100% {visibility: visible;}
 }
-
 @keyframes slider-2 {
-
-    /* Slider animáció: 2. elem megjelenítése */
-    0% {
-        visibility: hidden;
-    }
-
-    25% {
-        visibility: hidden;
-    }
-
-    50% {
-        visibility: visible;
-    }
-
-    75% {
-        visibility: hidden;
-    }
-
-    100% {
-        visibility: hidden;
-    }
+		0% {visibility: hidden;}
+	 25% {visibility: hidden;}
+	 50% {visibility: visible;}
+	 75% {visibility: hidden;}
+	100% {visibility: hidden;}
 }
-
 @keyframes slider-3 {
-
-    /* Slider animáció: 3. elem megjelenítése */
-    0% {
-        visibility: hidden;
-    }
-
-    25% {
-        visibility: hidden;
-    }
-
-    50% {
-        visibility: hidden;
-    }
-
-    75% {
-        visibility: visible;
-    }
-
-    100% {
-        visibility: hidden;
-    }
+		0% {visibility: hidden;}
+	 25% {visibility: hidden;}
+	 50% {visibility: hidden;}
+	 75% {visibility: visible;}
+	100% {visibility: hidden;}
 }
-
 @keyframes slider-4 {
-
-    /* Slider animáció: 4. elem megjelenítése */
-    0% {
-        visibility: hidden;
-    }
-
-    25% {
-        visibility: hidden;
-    }
-
-    50% {
-        visibility: hidden;
-    }
-
-    75% {
-        visibility: hidden;
-    }
-
-    100% {}
+		0% {visibility: hidden;}
+	 25% {visibility: hidden;}
+	 50% {visibility: hidden;}
+	 75% {visibility: hidden;}
+	100% {}
 }
 
 /* Általános stílusok */
@@ -179,6 +91,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-family: 'Montserrat', sans-serif;
 }
+/* -------------- About us page ------------------- */
 
 /* Stagger animáció görgetésre */
 section {
@@ -396,7 +309,7 @@ h1 {
     color: var(--color-primary);
 }
 
-/* -------- product card ---------*/
+/* -------- products page ---------*/
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -454,3 +367,11 @@ h1 {
     height: 600px;
     width: 100%;
 }
+
+/* ------- btn to scroll up -------*/
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
