--- a/css/app.css
+++ b/css/app.css
@@ -369,9 +369,23 @@ h1 {
 }
 
 /* ------- btn to scroll up -------*/
-#btn-back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display: none;
-  }
+.arrow-up {
+    font-size: 56px; /* Adjust the arrow size */
+ }
+
+
+
+ /* --------- services --------------*/
+ .parallax {
+	background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+	background-size: cover;
+}
+.parallax-inner {
+	color: white;
+  display: flex;
+  height: 100%;
+  align-items: center;
+	justify-content: center;
+}
