--- a/css/app.css
+++ b/css/app.css
@@ -370,22 +370,108 @@ h1 {
 
 /* ------- btn to scroll up -------*/
 .arrow-up {
-    font-size: 56px; /* Adjust the arrow size */
+    font-size: 30px; /* Adjust the arrow size */
+    margin-top: 50px;
  }
+ 
+/* Az "ecogourmet-cards" osztály alá tartozó kártyák stílusa */
 
+.ecogourmet-cards .card {
+    border: none;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    overflow: hidden;
+    border-radius: 20px;
+    min-height: 450px;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+    display: flex; /* Adjuk hozzá flexboxot a card-hoz */
+    flex-direction: column; /* Oszlopokba rendezzük az elemeit */
+    justify-content: space-between; /* Az elemeket oszlopok közt helyezi el, mindig az alsó részen hagyja a tartalmat */
+    margin-bottom: 10px; /* Adj hozzá egy margin-bottom értéket */
 
-
- /* --------- services --------------*/
- .parallax {
-	background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-	background-size: cover;
-}
-.parallax-inner {
-	color: white;
-  display: flex;
-  height: 100%;
-  align-items: center;
-	justify-content: center;
-}
+  
+    @media (max-width: 768px) {
+      min-height: 350px;
+    }
+  
+    @media (max-width: 420px) {
+      min-height: 300px;
+    }
+  
+    &:hover {
+      transform: scale(0.98);
+      box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.3);
+      background-size: 130%;
+      transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  
+      .card-body {
+        margin-top: 80px;
+        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+      }
+  
+      .card-img-overlay {
+        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+        background: rgb(255, 186, 33);
+        background: linear-gradient(0deg, rgba(255, 186, 33, 0.5) 0%, rgba(255, 186, 33, 1) 100%);
+      }
+    }
+  
+    .card-footer .btn {
+      border: 2px solid #fff;
+      color: #000000;
+    
+      &:hover {
+        background-color: #fff;
+        color: #000;
+        transform: scale(1.2);
+      }
+    }
+  
+    .card-body {
+        min-height: 150px; /* Új rész: Minimális magasság beállítása */
+        margin-top: 40px; /* texthez */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+      }
+      
+      .card-title {
+        font-weight: 800;
+        margin-bottom: 10px;
+      }
+      
+      .card-meta {
+        color: rgba(0, 0, 0, 0.3);
+        text-transform: uppercase;
+        font-weight: 500;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+      }
+      
+      .card-footer .btn {
+        border: 2px solid #fff;
+        color: #000000;
+        display: flex;
+        flex-direction: column;
+      
+        &:hover {
+          background-color: #fff;
+          color: #000;
+          transform: scale(1.4);
+        }
+      }
+      
+    /* Általános stílusok */
+    .lead {
+      color: #aaa;
+    }
+  
+    .wrapper {
+      margin: 10vh;
+    }
+    .card-text-ar {
+        position: absolute; /* Adjuk meg az abszolút pozíciót a .card-text-hez */
+        bottom: 20; /* Pozícionáljuk az elemet a szülő alsó részén */
+      }
+  }
+  
