--- a/css/app.css
+++ b/css/app.css
@@ -370,8 +370,8 @@ h1 {
 
 /* ------- btn to scroll up -------*/
 .arrow-up {
-    font-size: 30px; /* Adjust the arrow size */
-    margin-top: 50px;
+    font-size: 25px; /* Adjust the arrow size */
+    margin-left: 50px;
  }
  
 /* Az "ecogourmet-cards" osztály alá tartozó kártyák stílusa */
