--- a/css/app.css
+++ b/css/app.css
@@ -374,7 +374,7 @@ h1 {
     margin-left: 50px;
  }
  
-/* Az "ecogourmet-cards" osztály alá tartozó kártyák stílusa */
+/* Az "ecogourmet-cards" osztály alá tartozó kártyák stílusa - shop cards. */
 
 .ecogourmet-cards .card {
     border: none;
