--- a/css/app.css
+++ b/css/app.css
@@ -469,4 +469,66 @@ h1 {
       }
   }
   
-  
+/* Kosár stílusok */
+.cart-container {
+    background-color: #f8f9fa; /* Háttérszín */
+    position: fixed;
+    top: 50px;
+    right: 10px;
+    padding: 15px;
+    border: 1px solid #ced4da; /* Szegélyszín */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Árnyék */
+    max-width: 800px; /* Maximális szélesség */
+    z-index: 1000; /* Z-index érték a más tartalmak felett való elhelyezéshez */
+    transition: box-shadow 0.3s ease; /* Animáció az árnyékra */
+}
+
+.cart-container h3 {
+    font-size: 18px;
+    color: #007bff; /* Betűszín */
+    margin-bottom: 15px;
+}
+
+.cart-container table {
+    width: 100%;
+}
+
+.cart-container th, .cart-container td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd; /* Alsó szegélyszín a cellák között */
+}
+
+.cart-container th {
+    background-color: #007bff; /* Fejléc háttérszín */
+    color: white;
+}
+
+.cart-container tbody tr:hover {
+    background-color: #f2f2f2; /* Sor háttérszín hover állapotban */
+}
+
+.cart-container button {
+    background-color: #dc3545; /* Gomb háttérszín */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.cart-container button:hover {
+    background-color: #c82333; /* Gomb háttérszín hover állapotban */
+}
+.cart-container:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Enyhe árnyék hover állapotban */
+}
+/* Számjelző stílusok */
+.badge {
+    background-color: #dc3545; /* Háttérszín */
+    color: white;
+    border-radius: 50%;
+    padding: 5px 8px;
+    font-size: 12px;
+}
